# atomicstore

./: .gitlab-ci.yml  CNAME  Cargo.toml  LICENSE  Makefile  README.md  crates.js  help.html  index.html  nginx.conf  search-index.js  settings.html  source-files.js  src-files.js
.cargo/: config
.github/workflows/: audit.yml  build.yml  coverage.yml
atomic_store/: all.html  index.html  sidebar-items.js  type.Result.html
atomic_store/append_log/: fn.format_index_file_pattern.html  fn.format_nth_file_path.html  fn.load_from_file.html  index.html  sidebar-items.js  struct.AppendLog.html  struct.Iter.html
atomic_store/atomic_store/: fn.archive_file_exists.html  fn.archive_files.html  fn.extract_count.html  fn.format_archived_file_path.html  fn.format_latest_file_path.html  fn.format_working_file_path.html  fn.load_state.html  fn.prune_archives.html  index.html  sidebar-items.js  struct.AtomicStore.html  struct.AtomicStoreFileContents.html  struct.AtomicStoreLoader.html
atomic_store/error/: enum.PersistenceError.html  index.html  sidebar-items.js  struct.ArkDeError.html  struct.ArkDeSnafu.html  struct.ArkSerError.html  struct.ArkSerSnafu.html  struct.BincodeDeError.html  struct.BincodeDeSnafu.html  struct.BincodeSerError.html  struct.BincodeSerSnafu.html  struct.DuplicateResourceKey.html  struct.DuplicateResourceKeySnafu.html  struct.FailedToFindExpectedResource.html  struct.FailedToFindExpectedResourceSnafu.html  struct.FailedToResolvePath.html  struct.FailedToResolvePathSnafu.html  struct.FailedToWriteToFile.html  struct.FailedToWriteToFileSnafu.html  struct.FeatureNotYetImplemented.html  struct.FeatureNotYetImplementedSnafu.html  struct.GlobRuntime.html  struct.GlobRuntimeSnafu.html  struct.GlobSyntax.html  struct.GlobSyntaxSnafu.html  struct.InvalidFileContents.html  struct.InvalidFileContentsSnafu.html  struct.InvalidPathToFile.html  struct.InvalidPathToFileSnafu.html  struct.LocationOutOfDateSnafu.html  struct.OtherLoadError.html  struct.OtherLoadSnafu.html  struct.OtherStoreError.html  struct.OtherStoreSnafu.html  struct.ResourceFormatInconsistent.html  struct.ResourceFormatInconsistentSnafu.html  struct.StdIoDirOpsError.html  (+13 more)
examples/: persisted_things.rs
src/: append_log.rs  atomic_store.rs  error.rs  fixed_append_log.rs  kv_store.rs  lib.rs  load_store.rs  rolling_log.rs  storage_location.rs  testing.rs  utils.rs  version_sync.rs
tests/: persisted_things.rs
(+101 files in other folders)
