[package]
name = "atomic_store"
description = "Persistence with atomic synchronization for a single version of record"
version = "0.1.1"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-serialize = "0.3.0"
bincode = "1.3.3"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
snafu = { version = "0.7", features = ["backtraces"] }

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock"]

[dev-dependencies]
array-init = "2.0"
quickcheck = "1.0"
tempfile = "3.3"
rand_chacha = "0.3.1"
rand = "0.8.4"
rand_distr = "0.4.3"
rand_core = "0.6.2"
quickcheck_macros = "1.0"

