[package]
name = "atomic_store"
description = "Persistence with atomic synchronization for a single version of record"
version = "0.1.3"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-serialize = "0.3.0"
bincode = "1.3.3"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
snafu = { version = "0.7", features = ["backtraces"] }
tracing = "0.1"

[dev-dependencies]
array-init = "2.1"
quickcheck = "1.0"
tempfile = "3.10"
rand_chacha = "0.3.1"
rand = "0.8.4"
rand_distr = "0.4.3"
rand_core = "0.6.4"
quickcheck_macros = "1.0"

